--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             // --- Gemini API Call via Secure Worker ---
             async function callGemini(prompt) {
                 // IMPORTANT: This URL points to your secure Cloudflare Worker
-                const apiUrl = 'https://encrypt.dubc.io/';
+                const apiUrl = 'https://www.encrypt.dubc.io/';
                 
                 const payload = {
                     prompt: prompt 
