--- a/podcasts.html
+++ b/podcasts.html
@@ -53,7 +53,7 @@
             <!-- Podcast List Section -->
             <main class="space-y-4">
                  <!-- The Punchline & The Pause -->
-                 <a href="punchline-pause.html" class="group flex items-center p-4 bg-gray-800 rounded-lg w-full transition-all duration-300 hover:bg-purple-600 hover:scale-105 shadow-md">
+                 <a href="punchline-pause.html" target="_blank" rel="noopener noreferrer" class="group flex items-center p-4 bg-gray-800 rounded-lg w-full transition-all duration-300 hover:bg-purple-600 hover:scale-105 shadow-md">
                     <svg class="w-6 h-6 mr-4 text-purple-400 group-hover:text-white transition-colors duration-300" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Podcasts</title><path d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm0 21.6c-5.302 0-9.6-4.298-9.6-9.6S6.698 2.4 12 2.4s9.6 4.298 9.6 9.6-4.298 9.6-9.6 9.6zM8.4 9.6c0-.994.806-1.8 1.8-1.8s1.8.806 1.8 1.8v6c0 .994-.806 1.8-1.8 1.8s-1.8-.806-1.8-1.8V9.6zm5.4 0c0-.994.806-1.8 1.8-1.8s1.8.806 1.8 1.8v6c0 .994-.806 1.8-1.8 1.8s-1.8-.806-1.8-1.8V9.6z" fill="currentColor"/></svg>
                     <span class="font-semibold text-lg flex-grow text-left">The Punchline & The Pause</span>
                     <span class="text-gray-400 group-hover:text-white transition-transform duration-300 group-hover:translate-x-1">&rarr;</span>
@@ -68,7 +68,7 @@
 
         <!-- Footer -->
         <footer class="absolute bottom-4 text-center text-gray-600 text-sm">
-            <p>&copy; 2024 dubbb_c. All Rights Reserved.</p>
+            <p>&copy; 2025 dubbb_c. All Rights Reserved.</p>
         </footer>
     </div>
 
