--- a/flashcards.html
+++ b/flashcards.html
@@ -134,7 +134,7 @@
             { term: '15-year loan', definition: 'A nontraditional mortgage product that shortens the standard mortgage term from 30 years to 15 years' },
             { term: 'abutting', definition: 'Land parcels that share a common border' },
             { term: 'acceleration clause', definition: 'Allows a lender to demand immediate and full payment of all debt owed if a buyer defaults or fails to meet certain conditions that apply to the loan' },
-            { term: 'accession', definition: 'The addition of value to property through labor or the addition of new materials, including an increase in land through natural processes' }
+            { term: 'accession', definition: 'The addition of value to property through labor or the addition of new materials, including an increase in land through natural processes' },
             { term: '1031 tax-deferred exchange', definition: 'Section 1031 of the Internal Revenue Code allows the owner of real property to sell that property and then reinvest in a "like-kind" property and defer paying any capital gains taxes; strict IRS rules regulate this type of exchange' },
             { term: '15-year loan', definition: 'A nontraditional mortgage product that shortens the standard mortgage term from 30 years to 15 years' },
             { term: 'abutting', definition: 'Land parcels that share a common border' },
