--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     onerror="this.onerror=null;this.src='https://placehold.co/128x128/1a202c/9ca3af?text=Error';"
                 >
                 <h1 class="text-2xl md:text-3xl font-bold text-white">dubbb_c</h1>
-                <p id="streamer-bio" class="text-gray-400 mt-2 text-sm md:text-base">Content Creator | Semi-Pro Gamer | Community Builder</p>
+                <p id="streamer-bio" class="text-gray-400 mt-2 text-sm md:text-base">Content Creator | DJ | Semi-Pro Gamer | Community Builder</p>
             </header>
 
             <!-- Social Links Section -->
