--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             background-color: #0a0a0a;
         }
 
-        /* --- Aurora Background Animation --- */
-        body::before, body::after {
+        /* --- Radiating Background Animation --- */
+        body::before {
             content: '';
-            position: fixed; /* Changed to fixed to stay in place on scroll */
+            position: fixed;
             z-index: -1;
             top: 50%;
             left: 50%;
@@ -39,19 +39,17 @@
             height: 150vmax;
             border-radius: 50%;
             background-color: rgba(147, 51, 234, 0.15); /* Purple */
-            animation: rotate 25s linear infinite;
+            animation: radiate 10s ease-in-out infinite;
             filter: blur(100px);
         }
 
-        body::after {
-            background-color: rgba(34, 197, 94, 0.1); /* Green */
-            animation-delay: -12.5s;
-        }
-
-        @keyframes rotate {
-            0% { transform: translate(-50%, -50%) rotate(0deg) scale(1); }
-            50% { transform: translate(-50%, -50%) rotate(180deg) scale(1.1); }
-            100% { transform: translate(-50%, -50%) rotate(360deg) scale(1); }
+        @keyframes radiate {
+            0%, 100% {
+                transform: translate(-50%, -50%) scale(1);
+            }
+            50% {
+                transform: translate(-50%, -50%) scale(1.2);
+            }
         }
 
         /* --- Glassmorphism Effect --- */
