--- a/index.html
+++ b/index.html
@@ -35,20 +35,22 @@
             z-index: -1;
             top: 50%;
             left: 50%;
-            width: 150vmax;
-            height: 150vmax;
+            width: 120vmax;
+            height: 120vmax;
             border-radius: 50%;
-            background-color: rgba(147, 51, 234, 0.15); /* Purple */
-            animation: radiate 10s ease-in-out infinite;
-            filter: blur(100px);
+            background-color: rgba(147, 51, 234, 0.2); /* Purple Glow */
+            animation: radiate 8s ease-in-out infinite;
+            filter: blur(120px);
         }
 
         @keyframes radiate {
             0%, 100% {
-                transform: translate(-50%, -50%) scale(1);
+                transform: translate(-50%, -50%) scale(0.9);
+                opacity: 0.8;
             }
             50% {
-                transform: translate(-50%, -50%) scale(1.2);
+                transform: translate(-50%, -50%) scale(1.3);
+                opacity: 1;
             }
         }
 
