--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dubbb_c's Social Hub</title>
+    <title>Dubhub</title>
+    <meta name="keywords" content="dub, dubc, dubhub, dubbb_c, social, links, twitch, kick, dj, content creator">
     
     <!-- Favicon Configuration -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -35,21 +36,21 @@
             z-index: -1;
             top: 50%;
             left: 50%;
-            width: 120vmax;
-            height: 120vmax;
+            width: 80vmax; /* Concentrated the glow */
+            height: 80vmax; /* Concentrated the glow */
             border-radius: 50%;
-            background-color: rgba(147, 51, 234, 0.2); /* Purple Glow */
+            background-color: rgba(120, 50, 220, 0.25); /* Gloss midnight purple */
             animation: radiate 8s ease-in-out infinite;
-            filter: blur(120px);
+            filter: blur(100px); /* Slightly less blur for a more defined feel */
         }
 
         @keyframes radiate {
             0%, 100% {
-                transform: translate(-50%, -50%) scale(0.9);
-                opacity: 0.8;
+                transform: translate(-50%, -50%) scale(0.95);
+                opacity: 0.9;
             }
             50% {
-                transform: translate(-50%, -50%) scale(1.3);
+                transform: translate(-50%, -50%) scale(1.1);
                 opacity: 1;
             }
         }
