--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dubhub</title>
+    <title>dubhub</title>
     <meta name="keywords" content="dub, dubc, dubhub, dubbb_c, social, links, twitch, kick, dj, content creator">
     
     <!-- Favicon Configuration -->
