--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dubhub</title>
-    <meta name="keywords" content="dub, dubc, dubhub, dubbb_c, social, links, twitch, kick, dj, content creator">
+    <meta name="keywords" content="dub, dubb, dubbb, dubbb_, dubc, dubhub, dubbb_c, social, links, tiktok, instagram, podcast, punchline, pause, the, twitch, kick, dj, content creator">
     
     <!-- Favicon Configuration -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
