--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
         <!-- Footer -->
         <footer class="absolute bottom-6 w-full text-center text-gray-500 text-sm animate-fade-in" style="animation-delay: 1.2s;">
             <p>&copy; 2025 dubbb_c. All Rights Reserved.</p>
+            <p><a href="/security.html">Security</a></p>
         </footer>
 
     </div>
