--- a/index.html
+++ b/index.html
@@ -245,7 +245,10 @@
         <!-- Footer -->
         <footer class="absolute bottom-6 w-full text-center text-gray-500 text-sm animate-fade-in" style="animation-delay: 1.2s;">
             <p>&copy; 2025 dubbb_c. All Rights Reserved.</p>
-            <p><a href="/security.html">Security</a></p>
+            <div class="flex justify-center space-x-4 mt-1">
+                <a href="/security.html" class="hover:text-white transition-colors">Security</a>
+                <a href="hall-of-fame.html" class="hover:text-white transition-colors">Hall of Fame</a>
+            </div>
         </footer>
 
     </div>
@@ -440,12 +443,19 @@
 
             // --- Utility Functions ---
             copyBtn.addEventListener('click', () => {
-                navigator.clipboard.writeText(modalText.innerText).then(() => {
+                // Using a temporary textarea for broader compatibility
+                const textArea = document.createElement("textarea");
+                textArea.value = modalText.innerText;
+                document.body.appendChild(textArea);
+                textArea.select();
+                try {
+                    document.execCommand('copy');
                     copyBtn.innerText = 'Copied!';
                     setTimeout(() => { copyBtn.innerText = 'Copy Text'; }, 2000);
-                }).catch(err => {
-                    console.error('Failed to copy text: ', err);
-                });
+                } catch (err) {
+                    console.error('Fallback: Oops, unable to copy', err);
+                }
+                document.body.removeChild(textArea);
             });
         });
     </script>
