--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         </div>
         
         <!-- Footer -->
-        <footer class="absolute bottom-6 w-full text-center text-gray-500 text-sm animate-fade-in" style="animation-delay: 1.2s;">
+        <footer class="absolute bottom-6 w-full text-center text-gray-500 text-sm animate-fade-in z-20" style="animation-delay: 1.2s;">
             <p>&copy; 2025 dubbb_c. All Rights Reserved.</p>
             <div class="flex justify-center space-x-4 mt-1">
                 <a href="/security.html" class="hover:text-white transition-colors">Security</a>
@@ -461,3 +461,4 @@
     </script>
 </body>
 </html>
+
