--- a/gta-rp-resources.html
+++ b/gta-rp-resources.html
@@ -133,7 +133,7 @@
             <!-- Links Section -->
             <main class="space-y-4">
                 <!-- BTRP: LSPD -->
-                <a href="https://btrp.gg/departments/lspd" target="_blank" rel="noopener noreferrer" class="social-link group flex items-center p-4 glassmorphic rounded-xl w-full animate-fade-slide-up" style="animation-delay: 0.1s;">
+                <a href="btrp-lspd.html" target="_blank" rel="noopener noreferrer" class="social-link group flex items-center p-4 glassmorphic rounded-xl w-full animate-fade-slide-up" style="animation-delay: 0.1s;">
                     <svg class="w-6 h-6 mr-4 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126zM12 15.75h.007v.008H12v-.008z" />
                     </svg>
